VP 10.5.0 Changelog
------------------------
- add -EnableTrueFullscreen (force enables/overrides the true fullscreen video preference) to command line

- add VPTableStart broadcast message for frontends as notification that playfield should be shown

- throw balls in player: add support to change the default ball mass when throwing a ball. The user can also set the default ball mass in the editor options (menu: preferences)

- configurable global flipper physics sets: setting a negative value for a flipper physics setting in there will ignore that value and use the respective table flipper value instead

- add 'Set Defaults' button to the editor properties to reset editor changes and position/size of the script window

- increase usable layers from 8 to 11

- add ScreenSpace Reflections to the global video and table user properties, strength can be changed in the table lighting panel
  This adds very fake, but also very fast local reflection effects to all table elements

- add 'Disable Lighting from below' functionality for Targets and Walls (0..1) to optionally disable light coming from below (e.g. from light elements)

- fix ramp collision/internal walls reaching below and above the actual visible walls or wires, which was mainly an issue for rather straight and/or very steep ramps

- draw also flipper thickness in the editor

- improve gate swing physics, correct backwards initial swing, and expose new gravity factor parameter.
  Also add some "bounce back" for 1-way gates. Currently set up to use as-is defaults, but Wrd1972 recommends the following settings:
   Ideal setting for GATE motion:
    Elasticity = .4 (default)
    Friction = .02 (default)
    Dampening = .85
    Gravity = 3
   Ideal for SWITCH ACTUATOR motion:
    Elasticity = .4 (default)
    Friction = .02 (default)
    Dampening = .9
    Gravity = 1

- add copy/paste feature for control points. Select a control point, press the "Copy" button or CTRL+C to copy the coordinates. 